# RIKEN-Graph500-SSSP

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  make_csv.py
apps/: CMakeLists.txt  main-sequential.cc  main.cc
command_templates/: shared.txt  supermuc-impi.txt
experiments/: riken.suite.yaml
jobs/fugaku/: n1s23.sh  n4s24.sh  n768s32.sh  n768s33.sh  n82944s39.sh  n82944s40.sh
src/: CMakeLists.txt
src/generator/: CMakeLists.txt  graph_generator.hpp  splittable_mrg.c  splittable_mrg.h
src/sssp/: CMakeLists.txt  abstract_comm.hpp  benchmark_helper.hpp  bottom_up_comm.hpp  graph.hpp  graph_constructor.hpp  logfile.h  logreader.cc  low_level_func.cc  mpi_comm.hpp  primitives.hpp  sssp.hpp  sssp_presol.hpp  sssp_state.hpp  validate.hpp
src/sssp-sequential/: CMakeLists.txt  csrgraph.cc  csrgraph.hpp  graphheap.hpp  shortestpath.cc  shortestpath.hpp
src/utils/: CMakeLists.txt  parameters.h  profiling.hpp  utils.hpp  utils_core.hpp
tests/: checkResults.py  comm_test.cc  test.py
